Implemented styles for navbar feature

--- a/freelance-camp-fe/app/app.component.html
+++ b/freelance-camp-fe/app/app.component.html
@@ -1,11 +1,11 @@
-<nav class="navbar navbar-fixed-top navbar-light bg-faded">
-  <div class="container"> 
+<nav class="navbar navbar-fixed-top navbar-light bg-faded nav-styles">
+  <div class='container'> 
     <ul class="nav">
-      <li class="nav-item">
-        <a class="nav-link" routerLink="/home" routerLinkActive="active">Home</a>
+      <li class='nav-item'>
+        <a class='nav-link' routerLink="/home" routerLinkActive="active">Home</a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" routerLink="/documents" routerLinkActive="active">Docs</a>
+      <li class='nav-item'>
+        <a class='nav-link' routerLink="/documents" routerLinkActive="active">Docs</a>
       </li>
       <li class="nav-item dropdown">
         <div ngbDropdown class="d-inline-block dropdown-links">
