--- a/freelance-camp-fe/app/proposal/proposal-list.component.html
+++ b/freelance-camp-fe/app/proposal/proposal-list.component.html
@@ -3,11 +3,11 @@
     <a class="list-group-item list-group-item-action active">
       <h1 class="headline">Proposal List</h1>
     </a>
-    <span *ngFor="let proposal of proposals" class="list-group-item list-group-item-action">
+    <span *ngFor="let proposal of proposals" class="list-group-item list-group-item-action group-styles">
       <a routerLink="/proposal/{{proposal.id}}" class="proposal-link">
         <h5 class="list-group-item-heading">{{proposal.customer}}</h5>
         <p class="list-group-item-text">
-          ${{ proposal.hourly_rate * proposal.estimated_hours }}
+          {{ proposal.hourly_rate * proposal.estimated_hours | currency:'USD':true:'.0' }}
         </p>
       </a>
     </span>
