--- a/freelance-camp-fe/app/proposal/proposal-list.component.html
+++ b/freelance-camp-fe/app/proposal/proposal-list.component.html
@@ -3,7 +3,7 @@
     <a class="list-group-item list-group-item-action active">
       <h1 class="headline">Proposal List</h1>
     </a>
-    <span *ngFor="let proposal of proposals" class="list-group-item list-group-item-action group-styles">
+    <span *ngFor="let proposal of proposals" class="list-group-item list-group-item-action">
       <a routerLink="/proposal/{{proposal.id}}" class="proposal-link">
         <h5 class="list-group-item-heading">{{proposal.customer}}</h5>
         <p class="list-group-item-text">
