--- a/freelance-camp-fe/app/proposal/proposal-new.component.html
+++ b/freelance-camp-fe/app/proposal/proposal-new.component.html
@@ -129,6 +129,14 @@
             >
             Generate Proposal
           </button>
+
+          <div
+            class="alert alert-success"
+            role="alert"
+            [hidden]="!submitted"
+            >
+            Your proposal has been generated. <a class="alert-link" routerLink="/proposals">View all proposals</a>
+          </div>
         </form>
       </div>
     </div>
